# decompilation-tools

./: .clang-format  .gitignore  LICENSE  common.idc  enums.idc  functions.idc  main.idc  names.idc  objects.idc  script.idc  strings.idc  structs.idc  variables.idc  widgets.idc
LocoParser/: CMakeLists.txt  LocoParser.sln  build.sh
LocoParser/LocoParser/: CMakeLists.txt  LocoParser.vcxproj  main.cpp
Tools/: OpenLocoTools.sln
Tools/Common/: Constants.cs  Util.cs
Tools/LanguageFileAnalyser/: Program.cs
Tools/LocoGlobalAnalyser/: Program.cs
Tools/OpenLoco String Id Validator/: Program.cs  StringIdValidator.csproj
Tools/StringIdValidator/: Program.cs  StringIdValidator.csproj
Tools/StructToC#/: Program.cs  StructToC#.csproj
windows/: index.html
